# TuyaOpen

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_zh.md  action.yml  export.bat  export.sh  requirements.txt  tos  tos.py  tos_
apps/tuya.ai/your_chat_bot/: .gitignore  CMakeLists.txt  Kconfig  RAEDME_zh.md  README.md  app_default.config
apps/tuya.ai/your_chat_bot/assets/: lang_config.h
apps/tuya.ai/your_chat_bot/assets/zh-CN/: language.json
apps/tuya.ai/your_chat_bot/config/: APP_ESP32S3_BREAD_COMPACT_WIFI.config  APP_TUYA_T5AI_BOARD_LCD_3.5.config  DNESP32S3.config  DNESP32S3_BOX.config  ESP32S3_BREAD_COMPACT_WIFI.config  T5AI_MOJI_1.28.config  TUYA_T5AI_BOARD_EYES.config  TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_EVB.config  TUYA_T5AI_MINI.config  TUYA_T5AI_MINI_LCD_1.3.config  WAVESHARE_ESP32S3_TOUCH_AMOLED_1_8.config  WAVESHARE_ESP32_S3_TOUCH_AMOLED_1_8.config  XINGZHI_Cube_0_96OLED_WIFI.config  t5ai.config  tuya_t5ai_board_lcd_3.5.config
apps/tuya.ai/your_chat_bot/include/: ai_audio_proc.h  app_ai.h  app_board_api.h  app_button.h  app_chat_bot.h  app_display.h  app_led.h  app_player.h  app_recorder.h  app_vad.h  tuya_audio_debug.h  tuya_audio_player.h  tuya_audio_recorder.h  tuya_config.h  tuya_display.h
apps/tuya.ai/your_chat_bot/include/ai_audio/: ai_audio.h  ai_audio_agent.h  ai_audio_cloud_asr.h  ai_audio_debug.h  ai_audio_input.h  ai_audio_player.h  ai_audio_wakeup.h
apps/tuya.ai/your_chat_bot/include/media/: app_media_alert.h
apps/tuya.ai/your_chat_bot/script/: gen_lang.py
apps/tuya.ai/your_chat_bot/src/: ai_audio_proc.c  app_ai.c  app_ai_v1_0.c  app_button.c  app_chat_bot.c  app_led.c  app_player.c  app_recorder.c  app_system_info.c  app_vad.c  tuya_audio_debug.c  tuya_audio_recorder.c  tuya_main.c
apps/tuya.ai/your_chat_bot/src/ai_audio/: ai_audio_agent.c  ai_audio_cloud_asr.c  ai_audio_debug.c  ai_audio_input.c  ai_audio_main.c  ai_audio_player.c  ai_audio_wakeup.c
apps/tuya.ai/your_chat_bot/src/display/: CMakeLists.txt  FONT_SY_20.c  Kconfig  app_board_api.c  app_display.c  app_ui.h  display_gui.h  tuya_display.c  tuya_display_lvgl.c  tuya_lvgl.c  tuya_lvgl.h
apps/tuya.ai/your_chat_bot/src/media/: app_media_alert.c
apps/tuya.ai/your_chat_bot/src/minimp3/: minimp3_ex.h  minimp3_test.c
apps/tuya.ai/your_otto_robot/: CMakeLists.txt  Kconfig  README.md  app_default.config
apps/tuya.ai/your_otto_robot/assets/zh-CN/: language.json
apps/tuya.ai/your_otto_robot/config/: TUYA_T5AI_MINI.config
apps/tuya.ai/your_otto_robot/include/: app_display.h  app_system_info.h  oscillator.h  otto_movements.h  reset_netcfg.h  tuya_config.h
apps/tuya.ai/your_otto_robot/include/ai_audio/: ai_audio.h  ai_audio_cloud_asr.h  ai_audio_input.h
apps/tuya.ai/your_otto_robot/src/: app_chat_bot.c  app_system_info.c  oscillator.c  otto_movements.c  otto_robot_main.c  reset_netcfg.c  tuya_main.c
apps/tuya.ai/your_otto_robot/src/ai_audio/: ai_audio_agent.c  (+1 more)
src/device_driver/display/: CMakeLists.txt  Kconfig  tkl_display.c  tkl_display.h
src/device_driver/display/tft_spi/: disp_spi_driver.c  disp_spi_driver.h  disp_spi_gc9a01.c  disp_spi_ili9341.c  disp_spi_st7789.c
src/device_driver/touch/: CMakeLists.txt  cst816x.h  gt911_i2c.c  tkl_touch.c
src/liblvgl/: CMakeLists.txt  Kconfig
src/liblvgl/conf/: lv_conf.h
src/liblvgl/port/: lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_port_log.c  lv_port_mem.c  lv_vendor.c  lv_vendor.h
src/libprotobuf-c/: CMakeLists.txt  Kconfig
src/libprotobuf-c/protobuf-c/: IoTOSconfig  local.mk  protobuf-c.yaml
src/peripherals/: CMakeLists.txt  Kconfig
src/peripherals/audio_codecs/: CMakeLists.txt  Kconfig
src/peripherals/button/: CMakeLists.txt  Kconfig
src/peripherals/button/tdl_button/: README.md  README_CN.md
src/peripherals/display/: CMakeLists.txt  Kconfig
src/peripherals/display/include/: lcd_gc9a01.h  lcd_ili9341.h  lcd_ili9488.h  lcd_st7789.h  tuya_lcd_device.h
src/peripherals/display/tft_rgb/: Kconfig  disp_rgb_ili9488.c  disp_sw_spi_driver.c  disp_sw_spi_driver.h
src/peripherals/display/tft_spi/: Kconfig  disp_spi_gc9a01.c  disp_spi_ili9341.c  disp_spi_st7789.c
src/peripherals/encoder/: Kconfig
src/peripherals/led/: CMakeLists.txt  Kconfig
src/peripherals/leds_pixel/: CMakeLists.txt  Kconfig
src/peripherals/touch/: CMakeLists.txt  Kconfig  cst816x.c  gt1151.c  gt1151.h  gt911_i2c.h  tkl_touch.c  tkl_touch.h
src/tuya_audio_service/: CMakeLists.txt  Kconfig
src/tuya_audio_service/codec_speex/include/: speex_encode.h
src/tuya_audio_service/codec_speex/src/: speex_encode.c
src/tuya_audio_service/encode_wav/include/: wav_encode.h
src/tuya_audio_service/encode_wav/src/: wav_encode.c
src/tuya_audio_service/protobuf/include/: protobuf_utils.h
src/tuya_audio_service/protobuf/src/: protobuf_utils.c
src/tuya_audio_service/speaker_upload/: Kconfig
src/tuya_audio_service/speaker_upload/include/: speaker_encode.h  speaker_encode_types.h  speaker_upload.h  speaker_upload_internal.h
src/tuya_audio_service/speaker_upload/src/: speaker_encode.c  speaker_upload.c
src/tuya_audio_service/speex/: Kconfig  configure
src/tuya_audio_service/speex/autom4te.cache/: output.0  output.3  requests  traces.0  traces.2  traces.3
src/tuya_audio_service/speex/port/: config.h
src/tuya_audio_service/tuya_voice_protocol/: Kconfig
src/tuya_audio_service/tuya_voice_protocol/include/: tuya_voice_protocol.h  tuya_voice_protocol_upload.h
src/tuya_audio_service/tuya_voice_protocol/src/: tuya_voice_json_parse.c  tuya_voice_json_parse.h  tuya_voice_protocol.c  tuya_voice_protocol_mqtt.c  tuya_voice_protocol_mqtt.h  tuya_voice_protocol_upload.c  tuya_voice_protocol_ws.c  tuya_voice_protocol_ws.h
src/tuya_audio_service/websocket_client/include/: websocket.h  websocket_client.h  websocket_conn.h  websocket_frame.h  websocket_netio.h  websocket_timer.h  websocket_utils.h
src/tuya_audio_service/websocket_client/src/: websocket_client.c  websocket_conn.c  websocket_frame.c  websocket_netio.c  websocket_timer.c  websocket_utils.c
(+612 files in other folders)
